# testTrunk

./: .gitignore  AtlantisTrunk.Rproj  Makefile_orig  params_to_add.txt
.Rproj.user/7E62A23F/: persistent-state
.github/workflows/: build_run_SETAS1.yaml
.svn/: wc.db
AtlantisTrunk.xcworkspace/: contents.xcworkspacedata
AtlantisTrunk.xcworkspace/xcshareddata/: AtlantisTrunk.xccheckout  AtlantisTrunk.xcscmblueprint
Trunk2025.xcworkspace/: contents.xcworkspacedata
atlantis/: Makefile  Makefile.in  PreRules.am  config.h  config.h.in  config.status  configure  configure.ac  out
atlantis/ConvertAtlantis/: Makefile  Makefile.in  atBioltoXML.c  atCreateXML.c  (+4 more)
atlantis/atmanage/: Makefile  Makefile.am  Makefile.in  atCloseKin.c  atManage.c  atManageAnnual.c  atManageIO.c  atManageParamIO.c  atManageSetup.c  atManageTier.c  atRlinkRAssess.c  atRlinkRBC.c  atRlinkRedus.c  atSS3assess.c
atlantis/atmanage/.deps/: atCloseKin.Po  atManage.Po  atManageAnnual.Po  atManageIO.Po  atManageIndex.Po  atManageMPATS.Po  atManageParamIO.Po  atManageSetup.Po  atManageTier.Po  atPGMSY.Po  atRlink.Po  atRlinkGadget.Po  atRlinkRAssess.Po  atRlinkRBC.Po  atRlinkRedus.Po  atSS3assess.Po
atlantis/atmanage/include/: atManage.h  atManageLib.h  atManagePrivate.h  atRlink.h
data-raw/: tests.r  tests2.r
example/: .Rhistory  ErrorsRunningSETasModel.txt  Example_Hydro_exchanges.xlsx  ReactiveAtlantisToolExample.R  SETasGroupsDem_short.csv  VMPA_setas_biol_fishing_Trunk_mergedSeasons.prm  VMPA_setas_harvest_F_Trunk.prm  VMPA_setas_harvest_F_Trunk2.prm  VMPA_setas_run_fishing_F_Trunk.prm
(+441 files in other folders)
